log/build_2024-11-20_15-52-46/stm_station/stderr.log
  File "/home/iliass/ros2_athens_ws/install/stm_station/lib/python3.8/site-packages/stm_station/stm_control_node_poscontrol.py", line 17
    from stm_interfaces.srv import
                                   ^
SyntaxError: invalid syntax

